modify rest api
