# docs/swagger.json
@@ -3,11 +3,7 @@
     "info": {
       "version": "1.0",
       "title": "Boilerplate RestApi",
-      "description": "A collection of API endpoints built for the Boilerplate API",
-      "license": {
-        "name": "MIT",
-        "url": "http://github.com/gruntjs/grunt/blob/master/LICENSE-MIT"
-      }
+      "description": "A collection of API endpoints built for the Boilerplate API"
     },
     "host": "localhost:3090",
     "basePath": "/api/v1",
@@ -23,7 +19,7 @@
     "paths": {
       "/auth/login": {
         "post": {
-          "description": "TODO: Add Description",
+          "description": "Client login request",
           "summary": "Client Login",
           "tags": [
             "Authorization"
@@ -60,7 +56,7 @@
             {
               "request": {
                 "method": "POST",
-                "uri": "/accounts/login",
+                "uri": "/auth/login",
                 "headers": {
                   "Content-Type": "application/json"
                 },
@@ -88,7 +84,7 @@
           }
         }
       },
-      "/accounts/signup": {
+      "/auth/signup": {
         "post": {
           "description": "TODO: Add Description",
           "summary": "User Signup",
@@ -127,7 +123,7 @@
             {
               "request": {
                 "method": "POST",
-                "uri": "/accounts/signup",
+                "uri": "/auth/signup",
                 "headers": {
                   "Content-Type": "application/json"
                 },
