# routes/index.js
@@ -1,0 +1,8 @@
+const express = require('express');
+const authController = require('../controllers/v1/auth');
+
+const router = express.Router();
+
+router.post('/auth/signup', authController.createNewUser);
+
+module.exports = router;
